# web3

./: .gitignore  README.md
hermes-skill/web3-chain-radar/: SKILL.md
web3-chain-radar/: README.md  pyproject.toml
web3-chain-radar/docs/: README_ZH.md
web3-chain-radar/openclaw-skill/web3-chain-radar-en/: SKILL.md  package.json
web3-chain-radar/openclaw-skill/web3-chain-radar-zh/: SKILL.md  package.json
web3-chain-radar/src/web3_chain_radar_mcp/: __init__.py  config.py  models.py  server.py
web3-chain-radar/src/web3_chain_radar_mcp/clients/: gmgn.py  safety.py
web3-chain-radar/src/web3_chain_radar_mcp/services/: momentum.py
web3-chain-radar/src/web3_chain_radar_mcp/tools/: __init__.py  onchain.py
web3-链上雷达/: .env.example  README.md  pyproject.toml
web3-链上雷达/docs/: README_ZH.md
web3-链上雷达/src/web3_chain_radar_mcp/clients/: __init__.py  dexscreener.py
web3-链上雷达/src/web3_chain_radar_mcp/services/: __init__.py  narrative.py
