[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web3-chain-radar-mcp"
version = "0.1.0"
description = "MCP server for Web3 on-chain narrative and momentum scanning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "xjh277826844" }
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
]

[project.scripts]
web3-chain-radar-mcp = "web3_chain_radar_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web3_chain_radar_mcp"]

